docs: adicionar gráficos do relatório ao README